we need the position in the formula converter, tdf#99093

Reviewed-on: https://gerrit.libreoffice.org/23884
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit e214df32fb3637bd7810a299fb8b38810b1a3874)

Change-Id: Ic3dd13aa4d4b8190b78f3e6f1cdda844e39cc719